--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.20.2",
     "axios": "^1.3.4",
     "babel-loader": "^9.1.2",
+    "bootstrap": "^5.2.3",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "sass": "^1.60.0",
